<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2020-2022 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Popup camera settings -->
    <string name="popup_led_title">Camera LED</string>
    <string name="popup_led_summary">Show LED light when the front camera appears and retracts</string>
    <string name="popup_title">Front camera sound effects</string>
    <string name="popup_title_muqin">Xylophone</string>
    <string name="popup_title_yingyan">Condor</string>
    <string name="popup_title_mofa">Magic</string>
    <string name="popup_title_jijia">Mecha</string>
    <string name="popup_title_chilun">Gearwheel</string>
    <string name="popup_title_cangmen">Cabin door</string>

    <!-- Popup camera strings -->
    <string name="popup_camera_tip">Warning</string>
    <string name="popup_camera_takeback_failed_times_calibrate">Couldn\'t close front camera multiple times. Try calibrating the camera.</string>
    <string name="popup_camera_popup_failed_times_calibrate">Couldn\'t open front camera multiple times. Try calibrating the camera.</string>
    <string name="popup_camera_calibrate_running">Front camera cannot be used during calibration.</string>
    <string name="popup_camera_calibrate_now">Calibrate</string>
    <string name="popup_camera_calibrate_failed">Couldn\'t calibrate</string>
    <string name="popup_camera_calibrate_success">Calibrated successfully. You can open the front camera now.</string>
    <string name="stop_operate_camera_frequently">You\'re opening the front camera too frequently.</string>
    <string name="takeback_camera_front_failed">Couldn\'t close front camera. Try again.</string>
    <string name="popup_camera_front_failed">Couldn\'t open front camera. Try again.</string>

    <!-- HBM settings -->
    <string name="hbm_fragment_title">High brightness mode</string>
    <string name="hbm_fragment_summary">Customize HBM preferences</string>
    <string name="hbm_mode_title">HBM</string>
    <string name="hbm_mode_summary">Enable peak luminance</string>
    <string name="auto_hbm_title">Automatic HBM</string>
    <string name="auto_hbm_summary">Enable peak luminance based on sunlight</string>
    <string name="auto_hbm_threshold_title"></string>
    <string name="auto_hbm_threshold_summary">Threshold (lux)</string>
    <string name="hbm_mode_warning">Auto brightness needs to be turned on for auto HBM to work.</string>

    <!-- Thermal Profiles -->
    <string name="thermal_title">Thermal Profiles</string>
    <string name="thermal_summary">Adjust per-app thermal profiles for optimum performance</string>
    <string name="thermal_default">Default</string>
    <string name="thermal_benchmark">Benchmark</string>
    <string name="thermal_browser">Browser</string>
    <string name="thermal_camera">Camera</string>
    <string name="thermal_dialer">Dialer</string>
    <string name="thermal_gaming">Gaming</string>
    <string name="thermal_streaming">Streaming</string>

    <!-- Touch Control Settings -->
    <string name="touch_control_title">Touch Control</string>
    <string name="touch_game_mode_title">Enable</string>
    <string name="touch_response_title">Responsivity</string>
    <string name="touch_response_summary">Controls touch response</string>
    <string name="touch_sensitivity_title">Sensitivity</string>
    <string name="touch_sensitivity_summary">Controls touch sensitivity for repeated taps</string>
    <string name="touch_resistant_title">Resistant area</string>
    <string name="touch_resistant_summary">Reduce touch sensitivity near the edges to avoid triggering touch controls</string>

    <!-- Clear Speaker -->
    <string name="clear_speaker_title">Clear speaker</string>
    <string name="clear_speaker_summary">Play a 30-second audio to clear the speaker</string>
    <string name="clear_speaker_description">Run this feature once or twice if you find that your speaker is lightly blocked by dust. Set media volume to maximum.\n\nIf the speaker is blocked heavily, run this feature 2–5 times while shaking your device with the speaker facing downwards.\n\nWARNING: Ensure that any headphones are unplugged.</string>
</resources>
