<?xml version="1.0" encoding="UTF-8"?>
<!--
     Copyright (C) 2021 The Evolution X Project
     Copyright (C) 2018-2021 crDroid Android Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/hbm_fragment_title">

    <SwitchPreferenceCompat
        android:key="hbm"
        android:title="@string/hbm_mode_title"
        android:icon="@drawable/ic_hbm_tile"
        android:summary="@string/hbm_mode_summary"
        android:defaultValue="false" />

    <SwitchPreferenceCompat
        android:key="auto_hbm"
        android:title="@string/auto_hbm_title"
        android:icon="@drawable/ic_auto_hbm"
        android:summary="@string/auto_hbm_summary"
        android:defaultValue="true" />

    <org.lineageos.settings.hbm.AutoHBMThresholdPreference
        android:key="auto_hbm_threshold"
        android:title="@string/auto_hbm_threshold_title"
        android:defaultValue="6000"
        android:dependency="auto_hbm" />

    <Preference
        android:key="auto_hbm_threshold_reset"
        android:title="@string/auto_hbm_threshold_reset_title"
        android:summary="@string/auto_hbm_threshold_reset_summary"
        android:icon="@drawable/ic_reset"
        android:persistent="false"
        android:dependency="auto_hbm" />

    <com.android.settingslib.widget.FooterPreference
        android:key="hbm_footer"
        android:title="@string/hbm_mode_warning"
        android:selectable="false" />

</PreferenceScreen>
